--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
 
 <body>
 
-	<div class='c_route'>>M:\Module\About\</div>
+	<div class='c_route'>>M:\<a href="/">Module</a>\<a href="/#!/about">About</a>\</div>
 
 	<div class="c_block">
 		<div class="c_side">Design Process</div>
