--- a/pages/cards.html
+++ b/pages/cards.html
@@ -4,7 +4,7 @@
 
 <body>
 
-	<div class='c_route'>>M:\Module\Cards\</div>
+	<div class='c_route'>>M:\<a href="/">Module</a>\<a href="/#!/cards">Cards</a>\</div>
 
 	<div class="c_block">
 		<div class="c_side">Programs</div>
