--- a/pages/download.html
+++ b/pages/download.html
@@ -4,7 +4,7 @@
 
 <body>
 
-	<div class='c_route'>>M:\Module\Download\</div>
+	<div class='c_route'>>M:\<a href="/">Module</a>\<a href="/#!/download">Download</a>\</div>
 
 	<div class='c_block'>
 		<div class='c_side'>All Card Download:</div>
