--- a/pages/main.html
+++ b/pages/main.html
@@ -4,7 +4,7 @@
 
 <body>
 
-	<div class='c_route'>>M:\Module\</div>
+	<div class='c_route'>>M:\<a href="/">Module</a>\</div>
 
 	<div class="c_block">
 		<div class="c_side">Bio</div>
