--- a/pages/rules.html
+++ b/pages/rules.html
@@ -3,7 +3,8 @@
 </head>
 
 <body>
-	<div class="c_route">>M:\Module\Rules\</div>
+
+	<div class='c_route'>>M:\<a href="/">Module</a>\<a href="/#!/rules">Rules</a>\</div>
 
 	<div class="c_block">
 		<div class="c_side">Programs & Functions</div>
