--- a/pages/team.html
+++ b/pages/team.html
@@ -4,7 +4,7 @@
 
 <body>
 
-	<div class='c_route'>>M:\Module\Team\</div>
+	<div class='c_route'>>M:\<a href="/">Module</a>\<a href="/#!/team">Team</a>\</div>
 
 	<div class="c_block">
 		<div class="c_side">Femi O. - Game Designer</div>
