--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script src="node_modules/angular/angular.min.js"></script>
 		<script src="node_modules/angular-route/angular-route.min.js"></script>
 		<script src="app.js"></script>
+		<base href="/">
 	</head>
 
 	<body ng-controller="modController">
